# uicdev_site

./: .env  README.md  main.py  pyproject.toml
apps/accounts/: models.py  urls.py  utils.py
apps/accounts/apis/: __init__.py  serializers.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_initial.py
apps/accounts/serializers/: __init__.py  auth.py
apps/accounts/views/: __init__.py  auth.py  author_crud.py  education_crud.py
apps/common/: admin.py  models.py  urls.py  utils.py
apps/common/apis/: __init__.py  serializers.py  views.py
apps/common/migrations/: 0001_initial.py  0002_remove_course_teacher_delete_category_and_more.py  0003_region_country.py
apps/common/serializers/: country_region.py  file_upload.py
apps/common/views/: __init__.py  country_region.py  file_upload.py  test_task.py
apps/courses/: admin.py  managers.py  models.py  urls.py
apps/courses/apis/: __init__.py  serializers.py  views.py
apps/courses/migrations/: 0001_initial.py  0002_category_name_en_category_name_ru_category_name_uz.py  0002_lessonenrollment.py  0003_course_tags_lesson_online_url_alter_lesson_type_and_more.py
apps/courses/serializers/: __init__.py  category.py  course.py  enrollment.py  tag.py
apps/courses/views/: __init__.py  category.py  course.py  enrollment.py  tag.py
apps/interactions/: admin.py  models.py  tasks.py
apps/interactions/migrations/: 0001_initial.py
apps/notifications/: models.py
apps/payments/: models.py
config/: celery.py  jazzmin_conf.py  settings.py  urls.py
fakepay/: main.py
(+2 files in other folders)
